[gd_scene load_steps=6 format=3 uid="uid://0ytxvvvlk4pa"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_604ml"]
[ext_resource type="Script" path="res://addons/simple-gui-transitions/transition.gd" id="2_ke67k"]
[ext_resource type="Texture2D" uid="uid://lwqouwrhk1cx" path="res://assets/Into_The_Fryer.png" id="2_u3qkl"]
[ext_resource type="PackedScene" uid="uid://c88l7nnkllhr0" path="res://levels/uipanels/credits.tscn" id="4_hjeaj"]

[sub_resource type="LabelSettings" id="LabelSettings_38pi2"]
font_size = 48
font_color = Color(1, 0.945098, 0.941176, 1)
outline_size = 2
outline_color = Color(0.811765, 0, 0, 0.486275)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.803922)
shadow_offset = Vector2(4, 4)

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_604ml")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u3qkl")
expand_mode = 2

[node name="GuiTransition" type="Node" parent="."]
script = ExtResource("2_ke67k")
auto_start = 1
animation_enter = 0
animation_leave = 1
duration = 1.0
layout = NodePath("..")
layout_id = "title_menu"
group = NodePath("../CenterContainer/PanelContainer/ButtonContainer")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="New Game" type="Button" parent="CenterContainer/PanelContainer/ButtonContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Instructions" type="Button" parent="CenterContainer/PanelContainer/ButtonContainer"]
layout_mode = 2
text = "Instructions"

[node name="Credits" type="Button" parent="CenterContainer/PanelContainer/ButtonContainer"]
layout_mode = 2
text = "Credits"

[node name="Credits" parent="." instance=ExtResource("4_hjeaj")]
visible = false
layout_mode = 1

[node name="Loading" type="CanvasLayer" parent="."]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="Loading"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Loading/CenterContainer"]
layout_mode = 2
text = "Loading..."
label_settings = SubResource("LabelSettings_38pi2")

[connection signal="pressed" from="CenterContainer/PanelContainer/ButtonContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/ButtonContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/ButtonContainer/Credits" to="." method="_on_credits_pressed"]
